# consultant

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: config.py  domain.py  main.py
app/api/v1/: reports.py
app/repositories/: storage.py
app/schemas/: common.py  report.py
app/services/: assembly_service.py  duckdb_service.py  normalize_service.py  parse_service.py  publish_service.py
app/validators/: report_validator.py
data/: Slide 4 Origination Trends.xlsx
docs/: api-management.md  nextjs-report-admin-guide.md  nextjs-report-editor-steps-blueprint.md
tests/: test_api_basic.py
